# livraria-vue3

./: .env  pyproject.toml
scripts/: set_my_ip.js
src/: App.vue
