[project]
name = "livraria-vue3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kauabarros-24", email = "martinsbarroskaua@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL"}


[tool.pdm]
distribution = false
